MessageConsumer should not be created randomly every time we call receive. Instead MessageSelector is now created once in a while and the consumer is changed only then. This ran with high throughput

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,9 +8,10 @@ ibm.mq:
 spring.jms.template:
   receive-timeout: 1s
 
-logging:
-  level:
-    ROOT: DEBUG
+## Enable to see the MQ Connection and Sessions being cached.
+#logging:
+#  level:
+#    ROOT: DEBUG
 spring:
   main:
     allow-circular-references: true
